@@ -10,7 +10,7 @@ Build-Depends: libz-dev, libpcre3-dev, gettext,
  libhttp-date-perl | libtime-modules-perl,
  cvs, cvsps, libdbd-sqlite3-perl,
  unzip, libio-pty-perl,
- dpkg-dev (>= 1.15.7~),
+ dpkg-dev (>= 1.16.2~),
  libc6.1 (>= 2.10.2-6) [ia64]
 Build-Depends-Indep: asciidoc (>> 8.0.0), xmlto, docbook-xsl (>> 1.72)
 Standards-Version: 3.9.4.0
